--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
 
     <!-- Halaman Menu Utama -->
     <div id="main-menu-page" class="page flex-col items-center justify-center p-4 bg-gradient-to-br from-slate-100 to-indigo-200">
-        <div class="w-full max-w-3xl text-center content-card p-8">
-            <h2 class="text-3xl font-bold text-indigo-700">Materi Pembelajaran Turunan</h2>
-            <p class="mt-2 text-slate-600">Pilih subbab yang ingin kamu pelajari. Selesaikan latihan di setiap subbab untuk membuka kuis!</p>
-            <div id="review-buttons-container" class="mt-6 flex flex-col gap-4">
-                <!-- Tombol Review akan di-generate oleh JS -->
+        <div class="w-full max-w-3xl content-card p-8">
+            <div id="student-info-main" class="mb-6 p-4 bg-indigo-50 rounded-lg border border-indigo-200 flex justify-between items-center text-sm">
+                <p>Nama: <span class="font-semibold" id="student-name-display-main"></span></p>
+                <p>Kelas: <span class="font-semibold" id="student-class-display-main"></span></p>
+            </div>
+            <div class="text-center">
+                <h2 class="text-3xl font-bold text-indigo-700">Materi Pembelajaran Turunan</h2>
+                <p class="mt-2 text-slate-600">Pilih subbab yang ingin kamu pelajari. Selesaikan latihan di setiap subbab untuk membuka kuis!</p>
+                <div id="review-buttons-container" class="mt-6 flex flex-col gap-4">
+                    <!-- Tombol Review akan di-generate oleh JS -->
+                </div>
             </div>
         </div>
     </div>
@@ -77,6 +83,10 @@
                 <button onclick="showPage('main-menu-page')" class="bg-white text-slate-700 font-semibold py-2 px-5 rounded-full shadow hover:bg-slate-200 transition">
                     &larr; Kembali ke Menu Utama
                 </button>
+            </div>
+            <div id="student-info-review" class="w-full max-w-4xl mx-auto mb-4 p-4 bg-white rounded-lg shadow-sm text-sm flex justify-between items-center">
+                <p>Nama: <span class="font-semibold" id="student-name-display-review"></span></p>
+                <p>Kelas: <span class="font-semibold" id="student-class-display-review"></span></p>
             </div>
             <header id="review-header" class="text-center mb-8"></header>
             <main id="review-content" class="space-y-10"></main>
@@ -91,6 +101,10 @@
         </div>
         <div class="w-full max-w-5xl mx-auto mt-20 mb-24 p-4">
             <div class="card p-6">
+                <div id="student-info-quiz" class="mb-4 p-3 bg-slate-100 rounded-md border border-slate-200 text-sm flex justify-between items-center">
+                    <p>Nama: <span class="font-semibold" id="student-name-display-quiz"></span></p>
+                    <p>Kelas: <span class="font-semibold" id="student-class-display-quiz"></span></p>
+                </div>
                 <div class="flex justify-between items-center mb-4">
                     <span class="text-slate-600 text-sm font-semibold">Soal <span id="current-question-number">1</span> dari 10</span>
                     <span id="timer" class="text-red-500 font-bold text-lg">Waktu: 20:00</span>
@@ -190,12 +204,13 @@ const reviewData = {
                 title: "Aturan Pangkat (Power Rule)",
                 content: "Ini adalah aturan paling fundamental. Jika $f(x) = ax^n$, maka turunannya adalah $f'(x) = a \\cdot n \\cdot x^{n-1}$. Pangkatnya turun ke depan, lalu pangkatnya dikurangi satu.",
                 example: {
-                    problem: "Turunan dari $f(x) = 4x^5 + \\sqrt{x}$",
+                    problem: "Turunan dari $f(x) = 2x^3 - 6x^2 + 5$",
                     solution: [
-                        "Ubah $\\sqrt{x}$ menjadi $x^{1/2}$. Jadi $f(x) = 4x^5 + x^{1/2}$.",
-                        "Turunkan suku pertama: $4 \\cdot 5 \\cdot x^{5-1} = 20x^4$.",
-                        "Turunkan suku kedua: $\\frac{1}{2} \\cdot x^{\\frac{1}{2}-1} = \\frac{1}{2}x^{-1/2} = \\frac{1}{2\\sqrt{x}}$.",
-                        "Gabungkan hasilnya: $f'(x) = 20x^4 + \\frac{1}{2\\sqrt{x}}$."
+                        "Kita turunkan suku demi suku menggunakan Aturan Pangkat.",
+                        "Turunan dari $2x^3$ adalah $2 \\cdot 3 \\cdot x^{3-1} = 6x^2$.",
+                        "Turunan dari $-6x^2$ adalah $-6 \\cdot 2 \\cdot x^{2-1} = -12x$.",
+                        "Turunan dari konstanta $5$ adalah $0$.",
+                        "Gabungkan hasilnya: $f'(x) = 6x^2 - 12x$."
                     ]
                 },
                 exercises: [
@@ -420,6 +435,7 @@ let appState = {
 function showPage(pageId) {
     document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
     document.getElementById(pageId).classList.add('active');
+    updateStudentInfoDisplay();
     if (pageId === 'main-menu-page') initMainMenu();
 }
 
@@ -468,6 +484,15 @@ function initMainMenu() {
         container.innerHTML += buttonHTML;
         topicCounter++;
     });
+}
+
+function updateStudentInfoDisplay() {
+    if (appState.studentName) {
+        const nameSpans = document.querySelectorAll('[id^="student-name-display"]');
+        const classSpans = document.querySelectorAll('[id^="student-class-display"]');
+        nameSpans.forEach(span => span.textContent = appState.studentName);
+        classSpans.forEach(span => span.textContent = appState.studentClass);
+    }
 }
 
 // --- LOGIKA REVIEW MATERI ---
